--- a/config/config.ini
+++ b/config/config.ini
@@ -1,9 +1,10 @@
 # Initial Node
 p2p-peer-address = p2p.ogetclab.io:9876
-
 p2p-peer-address = 114.55.87.175:9876
 p2p-peer-address = p2p.ogetc.blockgo.pro:8976
 p2p-peer-address = 123.126.106.85:9876
 p2p-peer-address = p2p-ogetc.eosbeijing.one:6005
 p2p-peer-address = ogetc-account.halowallet.io:9007
 p2p-peer-address = p2p.ogetc.gravitypool.io:9876
+p2p-peer-address = 125.110.111.96:9876
+p2p-peer-address = 123.101.212.86:9876
